fix: Removed overflow in pdf wrapper

--- a/src/features/pdf/PDFView.module.css
+++ b/src/features/pdf/PDFView.module.css
@@ -7,7 +7,6 @@
   & [role='button'] {
     display: none !important;
   }
-  overflow: hidden;
 }
 .pdf-wrapper h1 {
   margin-top: 0;
